# ReduxToken

./: .cursorrules  .gitignore  .gitmodules  AGENTS.md  ANALYTICS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  ESTUDO_HEADROOM.md  ESTUDO_RTK.md  LICENSE  README.md  ROADMAP.md  proxy.toml  pyproject.toml
.claude/: settings.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: compare.py  retention.py
docs/: lean-commands.md
examples/: basic.py  reversible.py
redux-token-core/: Cargo.toml
redux-token-core/src/: compressor.rs  lib.rs  rev.rs  stats.rs
redux-token-core/src/filters/: code.rs  json.rs  mod.rs  smart.rs  text.rs
redux-token-proxy/: Cargo.toml
redux-token-proxy/src/: cache.rs  config.rs  events.rs  main.rs  proxy.rs  reversible.rs  stats.rs
redux_token/: __init__.py  analytics.py  cli.py  doctor.py  hook.py  mcp.py  prehook.py  reversible.py  rewrite.py  telemetry.py  utils.py
tests/: test_analytics.py  test_doctor.py  test_hook.py  test_integration.py  test_retention.py  test_reversible.py  test_rewrite.py  test_telemetry.py
