[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "redux-token"
version = "0.2.0"
description = "Compressor inteligente de tokens para LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Elizio Martins", email = "elizio.matins@gmail.com" }]
keywords = ["llm", "tokens", "compression", "openai", "claude", "nlp", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
dependencies = ["typer>=0.12", "mcp>=1.0"]

[project.urls]
Homepage   = "https://github.com/ElizioMartins/ReduxToken"
Repository = "https://github.com/ElizioMartins/ReduxToken"
Issues     = "https://github.com/ElizioMartins/ReduxToken/issues"

[project.scripts]
redux-token     = "redux_token.cli:main"
redux-token-mcp = "redux_token.mcp:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "redux_token_core"
manifest-path = "redux-token-core/Cargo.toml"
