[package]
name = "redux-token-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "redux-proxy"
path = "src/main.rs"

[dependencies]
redux-token-core = { path = "../redux-token-core" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
dashmap = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
